Update macOS flags for vanilla login